envoy_proxy/envoy.yaml
static_resources:
  listeners:
  - name: lss_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 3200
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          # used when emitting stats
          stat_prefix: lss_hcm_filter
          
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: lss_http_route_config
            virtual_hosts:
            # name used when emitting stats, not imp for routing itself
            - name: lss_virtual_host
              domains: 
              - "*"
              routes:
              - match:
                  prefix: "/ukraine"
                route:
                  cluster: ukraine
              - match:
                  prefix: "/canada"
                route:
                  cluster: canada
  clusters:
  - name: ukraine
    type: STRICT_DNS
    connect_timeout: 15s
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ukraine
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: python_container1
                port_value: 5000
  - name: canada
    type: STRICT_DNS
    connect_timeout: 15s
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: canada
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: python_container2
                port_value: 5000
